<resources>
    <string name="app_name">51工匠</string>
    <string name="app_home_page_string">首页</string>
    <string name="app_publish_string">发布</string>
    <string name="app_message_string">消息</string>
    <string name="app_mine_string">我的</string>
    <string name="app_forget_pwd_string">找回密码</string>
    <string name="app_login_string">登录</string>
    <string name="app_code_string">获取验证码</string>
    <string name="app_register_string">注册</string>
    <string name="app_center_string">个人信息</string>
    <string name="app_save_string">保存</string>
    <string name="app_settings_string">设置</string>
    <string name="app_publish_info_string">发布信息</string>
    <string name="app_publish_detail_string">详情</string>
    <string name="app_publish_edit_string">编辑</string>
    <string name="app_share_string">分享</string>
    <string name="app_my_publish_string">我的发布</string>
    <string name="app_my_order_string">我的订单</string>
    <string name="app_my_address_string">我的收货地址</string>
    <string name="app_my_car_string">购物车</string>
    <string name="app_my_address_fix_string">修改地址</string>
    <string name="app_my_address_detail_string">地址详情</string>
    <string name="app_my_address_add_string">添加地址</string>
    <string name="app_area_string">选择地区</string>
    <string name="app_confirm_order_string">确认订单</string>
    <string name="app_search_shop_string">搜索本店商品</string>
    <string name="app_product_introduce_string">店铺简介</string>
    <string name="app_seller_center_string">个人主页</string>
    <string name="app_all_comment_string">全部评价</string>
    <string name="app_pub_comment_string">发布评价</string>
    <string name="app_web_string">网页</string>
    <string name="app_message_center_string">消息中心</string>
    <string name="app_order_manage_string">订单管理</string>
    <string name="app_shop_decorate_string">店铺装修</string>
    <string name="app_account_string">账户中心</string>
    <string name="app_safe_center_string">安全中心</string>
    <string name="app_card_string">个人名片</string>
    <string name="app_my_collect_string">我的收藏</string>
    <string name="add_record_string">浏览记录</string>
</resources>
