<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:id="@+id/app_framework_rl">

    <LinearLayout
        android:id="@+id/app_navigarion_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky_color_white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.sky.app.library.component.TabRaidoButton
            android:id="@+id/app_home_page"
            style="@style/tab_navigation_style"
            app:image_down="@mipmap/app_home_page_selected_icon"
            app:image_up="@mipmap/app_home_page_unselected_icon"
            app:textOne="@string/app_home_page_string" />

        <com.sky.app.library.component.TabRaidoButton
            android:id="@+id/app_home_openIM"
            style="@style/tab_navigation_style"
            app:image_down="@mipmap/im_tab_selecte"
            app:image_up="@mipmap/im_tab_unselecte"
            app:textOne="消息" />

        <com.sky.app.library.component.TabRaidoButton
            android:id="@+id/app_publish"
            style="@style/tab_navigation_style"
            android:layout_gravity="center"
            app:image_down="@mipmap/app_publish_selected_icon"
            app:image_up="@mipmap/app_publish_unselected_icon"
            app:textOne="@string/app_publish_string" />

        <com.sky.app.library.component.TabRaidoButton
            android:id="@+id/app_message"
            style="@style/tab_navigation_style"
            android:layout_gravity="center"
            app:image_down="@mipmap/message_tab_selected"
            app:image_up="@mipmap/message_tab_unselected"
            app:textOne="通知" />

        <com.sky.app.library.component.TabRaidoButton
            android:id="@+id/app_mine"
            style="@style/tab_navigation_style"
            android:layout_gravity="center"
            app:image_down="@mipmap/app_mine_selected_icon"
            app:image_up="@mipmap/app_mine_unselected_icon"
            app:textOne="@string/app_mine_string" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/driver_content_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/app_navigarion_ll" />

    <View style="@style/grey_0_3_horizontal_line"
        android:layout_above="@id/app_navigarion_ll"/>
</RelativeLayout>